stop horizontal scrolling on small screens

--- a/static/css/header.styl
+++ b/static/css/header.styl
@@ -5,3 +5,7 @@
 .navbar-right .btn-group {
     margin-right: 10px;
 }
+
+.row {
+	margin-right: 0px;
+}
